# Platformer

./: .gitignore  CMakeLists.txt
assets/layouts/: level_1.json  level_2.json  level_3.json  level_4.json  level_5.json  level_6.json  level_7.json  level_8.json  level_template.json
assets/roomSchemes/: jsonformats  test_room.json  test_room_old.json
assets/safes/: safe_0.json
assets/shaders/: animation.frag.glsl  animation.vert.glsl  beam.frag.glsl  beam.vert.glsl  beam_illumination.frag.glsl  beam_illumination.vert.glsl  circle_particle.frag.glsl  circle_particle.vert.glsl  illumination.frag.glsl  illumination.vert.glsl  line.vert.glsl  platform.frag.glsl  polygon.frag.glsl  polygon.vert.glsl  shadow.frag.glsl  shadow.vert.glsl  sprite.frag.glsl  text.frag.glsl  text.vert.glsl
assets/sounds/: music sources.txt
assets/textures/: textures sources.txt
assets/textures/backgrounds/test/: background_info.json
assets/textures/character/player_test/: preset.pdn
assets/textures/rooms/templates/: TestRoom.pdn
assets/textures/world_objects/: basic_platform_001.json  basic_platform_002.json  square_spike_001.json
src/: app_registry.cpp  app_registry.h  assets.cpp  assets.h  config.h  discord.cpp  discord.h  main.cpp  registry.cpp  registry.h  window.cpp  window.h
src/core/: application.cpp  application.h  draw.cpp  draw.h  input.cpp  input.h  registry.cpp  registry.h  util.h
src/fsm/: state.cpp  state.h
src/systems/: ShapeProcessing.cpp  ShapeProcessing.h  animation.cpp  animation.h  audio.cpp  audio.h  background.cpp  background.h  camera.cpp  camera.h  combat.cpp  combat.h  particle.cpp  particle.h  physics.cpp  physics.h  render.cpp  render.h  systems.h  world.cpp  world.h
src/utils/: entity_factory.cpp  entity_factory.h  geometry.h  shader.h  texture.cpp  texture.h
